--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "css-loader": "^1.0.1",
     "express": "^4.16.4",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "3.2.0",
     "react": "16.8.0-alpha.0",
     "react-dom": "16.8.0-alpha.0",
